--- a/Neo/App.config
+++ b/Neo/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Neo.Properties.Settings.csNeo" connectionString="Data Source=DESKTOP-7T00K3A\SQLEXPRESS;Initial Catalog=Neo;Integrated Security=True"
+        <add name="Neo.Properties.Settings.csNeo" connectionString="Data Source=DESKTOP-TQA28CQ;Initial Catalog=Neo;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
